# edu-quality-agent

./: .env.example  .gitignore  README.md  jy_application_tqmp.sql  jy_course_he.sql  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: README.md  __init__.py
docs/: AI校务质量监测多Agent系统架构设计.md
docs/acceptance/: P0-验收文档.md  P1-验收文档.md  P2-验收文档.md  P3-验收文档.md  P4-验收文档.md  README.md
docs/ddl/: README.md
docs/deploy/: README.md
edu_quality_agent/: __init__.py  graph.py  llm_client.py  me_form.py  observability.py  state.py
edu_quality_agent/sql/: log_ai_qa_lifecycle.sql
scripts/: smoke_compile.py  test_llm_gateway.py
tests/: test_compile.py  test_llm_client.py
